2010-09-19  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnimap.el (nnimap-wait-for-connection): Avoid a race condition while
	waiting for the connection string.

	* gnus-html.el (gnus-html-image-fetched): Protect against the data not
	arriving.

	* gnus-start.el (gnus-ignored-newsgroups): Remove [] from the list of
	bogus characters.  This allows selecting certain Gmail groups.

	* nnimap.el (nnimap-find-wanted-parts-1): New function.
	(nnimap-fetch-partial-articles): New variable.
	(nnimap-open-connection): When looking for credentials, also use the
	nnimap-server-port.
	(nnimap-request-article): Return the group/article number, so that Gnus
	`^' works as expected.
	(nnimap-find-wanted-parts-1): Return the MIME parts as IMAP wants
	them.

	* gnus.el (gnus-similar-server-opened): Refactor a bit and add
	comments.
	(gnus-methods-sloppily-equal): New function.
	(gnus): When using the development version of Gnus, load the gnus-load
	file.

	* gnus-start.el (gnus-get-unread-articles): Make sure that we call
	`gnus-open-server' on each method before trying to scan them etc.  This
	ensures that all the backend parameters are set correctly.

	* nnimap.el (nnimap-authenticator): New variable.
	(nnimap-open-connection): Allow anonymous login.
	(nnimap-transform-headers): The chars header is called Chars not
	Bytes.
	(nnimap-wait-for-response): Don't infloop if the IMAP connection
	drops.

	* gnus-art.el (gnus-article-describe-briefly): Fix up typo in last
	patch, found by Knut Anders Hatlen.

2010-09-19  Andreas Schwab  <schwab@linux-m68k.org>

	* gnus-agent.el (gnus-agent-batch-confirmation)
	(gnus-agent-expire-group, gnus-agent-expire): Pass proper format string
	to gnus-message.
	* gnus-art.el (gnus-article-describe-briefly): Likewise.
	* gnus-group.el (gnus-group-list-groups, gnus-group-describe-group)
	(gnus-group-edit-global-kill, gnus-group-describe-briefly): Likewise.
	* gnus-int.el (gnus-open-server): Likewise.